--- a/app/assets/stylesheets/posts/index.css
+++ b/app/assets/stylesheets/posts/index.css
@@ -124,5 +124,21 @@
 .search-form{
   display: flex;
   justify-content: center;
+
+}
+
+.search-prefecture{
+
+}
+
+.search-price{
+
+}
+
+.search-keyword{
   
+}
+
+.search-submit{
+
 }
