--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -1,19 +1,23 @@
 <div class='main'>
-  <div class='search-form'>
-    <%= search_form_for @p, url: posts_search_path do |f| %>
-      <%= f.collection_select :prefecture_name_eq, @prefecture_name, :name, :name, include_blank: '指定なし（ 都道府県 ）' %>
-      <br>
-      <%= f.search_field :price_gteq, placeholder: "0" %>円以上
-      <br>
-      〜 <%= f.search_field :price_lteq, placeholder: "999999" %>円以下
-      <br>
-      <%= f.search_field :title_or_explain_or_local_or_building_or_other_cont, placeholder:'キーワード' %>
-      <%= f.submit '検索' %>
-    <% end %>
-  </div>
   <%# 商品一覧 %>
   <div class='post-contents'>
     <ul class='post-lists'>
+      <li>
+        <div class='search-form'>
+          <%= search_form_for @p, url: posts_search_path do |f| %>
+            <div class="search-form-top">
+              <%= f.search_field :title_or_explain_or_local_or_building_or_other_cont, class: "search-keyword", placeholder:'キーワードで検索する' %>
+              <%= f.submit '検索', class: "search-submit" %>
+            </div>
+            <br>
+            <div class="search-form-btm">
+              <%= f.collection_select :prefecture_name_eq, @prefecture_name, :name, :name, class: "search-prefecture", include_blank: '指定なし' %>
+              <%= f.search_field :price_gteq, class: "search-price", placeholder: "0" %>円以上
+              〜 <%= f.search_field :price_lteq, class: "search-price", placeholder: "999999" %>円以下
+            </div>
+          <% end %>
+        </div>
+      </li>
       <% @results.each do |result| %>
         <li class='list'>
           <%= link_to post_path(result) do %>
