--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,5 +1,7 @@
 <div class="posts-sell-contents">
-
+  <div class="show-back">
+    <%=link_to '＜ もどる', :back, class:"show-back-btn" %>
+  </div>
   <div class="posts-sell-main">
     <h2 class="posts-sell-title">物件の情報を入力</h2>
     <%= form_with model: @post, url:post_path, local: true do |f| %>
@@ -17,7 +19,7 @@
       </div>
     </div>
     <%# /画像 %>
-    
+
     <%# タイトルと説明 %>
     <div class="new-posts">
       <div class="weight-bold-text">
@@ -61,9 +63,8 @@
     <%# /投稿の詳細 %>
 
     <%# 下部ボタン %>
-    <div class="sell-btn-contents">
-      <%= f.submit "編集する", class:"sell-btn"%>
-      <%=link_to 'もどる', :back, class:"back-btn" %>
+    <div class="register-btn">
+      <%= f.submit "編集する", class:"register-btn-in"%>
     </div>
     <%# /下部ボタン %>
   </div>
