--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
 <%# 商品の概要 %>
 <div class="post-show">
   <div class="show-back">
-    <%=link_to '＜ もどる', root_path, class:"show-back-btn" %>
+    <%=link_to '＜ もどる', :back, class:"show-back-btn" %>
   </div>
 
   <div class="post-box">
