--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -2,7 +2,7 @@
   <%# 商品一覧 %>
   <div class='post-contents'>
     <ul class='post-lists'>
-      <li>
+      <li class='list'>
         <div class='search-form'>
           <%= search_form_for @p, url: posts_search_path do |f| %>
             <div class="search-form-top">
