--- a/app/assets/stylesheets/posts/index.css
+++ b/app/assets/stylesheets/posts/index.css
@@ -137,7 +137,7 @@
   border-radius: 4px;
   height: 40px;
   line-height: 1.4em;
-  padding: 0px 50px 0px 10px;
+  padding: 0px 10px;
 }
 
 .search-submit{
@@ -159,7 +159,7 @@
   border-radius: 4px;
   height: 40px;
   line-height: 1.4em;
-  padding: 0px 20px 0px 10px;
+  padding: 0px 1px 0px 10px;
   width: 20%;
 }
 
