--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,7 @@
 
   <div class="form-group">
     <label class="form-text">ニックネーム（10文字まで）</label>
-    <%= f.text_area :nickname, class:"input-default", id:"nickname", maxlength:"40" %>
+    <%= f.text_area :nickname, class:"input-default", id:"nickname", maxlength:"10" %>
   </div>
 
   <div class="form-group">
@@ -20,12 +20,12 @@
 
   <div class="form-group">
     <label class="form-text">パスワード</label>
-    <%= f.password_field :password, class:"input-default", autocomplete: "new-password" %>
+    <%= f.password_field :password, class:"input-default", autocomplete: "new-password", placeholder:"6文字以上の半角英数字" %>
   </div>
 
   <div class="form-group">
     <label class="form-text">パスワード(確認)</label>
-    <%= f.password_field :password_confirmation, class:"input-default", autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, class:"input-default", autocomplete: "new-password", placeholder:"同じパスワードを入力して下さい" %>
   </div>
 
   <div class="form-group">
