--- a/app/assets/stylesheets/posts/index.css
+++ b/app/assets/stylesheets/posts/index.css
@@ -171,3 +171,9 @@
   display: flex;
   justify-content: space-between;
 }
+
+.no_result{
+  display: flex;
+  justify-content: center;
+  font-size: large;
+}
